Bug 342842 - Crop tool resets ratio to 1.00 on each initiation when Keep Ratio is checked.
Summary: Crop tool resets ratio to 1.00 on each initiation when Keep Ratio is checked.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-14 15:08 UTC by Tyson Tan
Modified: 2015-01-24 13:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2015-01-14 15:08:39 UTC
When Keep Ratio Constant is checked, Crop tool resets Ratio to 1.00 each time when it gets initiated.

Reproducible: Always

Steps to Reproduce:
1. Crop tool
2. Check "Will keep the ratio constant"
3. Set Ratio to something other than 1.00
4. Use it, the ratio works fine
5. Crop tool again

Actual Results:  
The ratio of Crop tool resets to 1.00 as soon as I start to drag. I have to set the ratio each time I use the tool.

Expected Results:  
BTW, shall we simplify the English text for the tool tip, from "Will keep the ratio constant" to just "Keep ratio"? I think it communicates better this way.
Comment 1 Dmitry Kazakov 2015-01-24 09:22:18 UTC
Git commit b1b7ed03802ee709e32589cc443e0721015646cf by Dmitry Kazakov.
Committed on 24/01/2015 at 09:22.
Pushed by dkazakov into branch 'calligra/2.9'.

Fix initialization of the ration in Crop Tool

M  +3    -1    krita/plugins/tools/tool_crop/kis_constrained_rect.cpp
M  +3    -0    krita/plugins/tools/tool_crop/kis_tool_crop.cc

http://commits.kde.org/calligra/b1b7ed03802ee709e32589cc443e0721015646cf
Comment 2 Tyson Tan 2015-01-24 13:10:39 UTC
Thank you, Dmitry! It's fixed! :)