Fix initialization of the ration in Crop Tool

BUG:342842